# ponyai

./: .gitignore  README.md  WORKSPACE
common/proto/: BUILD  control.proto  simulation_config.proto
homework1/: README.md  ReadME.md  build.sh  build_q1.sh  protest.sh  unittest.sh
homework1/helloworld/: BUILD  main.cc
homework1/protobuf/: canvas.cc  canvas.h  canvas_test.cc
homework1/q1/: BUILD  Gcd.java  Main.java  query.sh
homework1/test/: BUILD  Main.java
homework1/unittest/: car_test.cc
homework2/: BUILD  README.md  README.txt  main.cc  pointcloud.cc  pointcloud.h
homework2/q1/: description.txt  draw.m  his_print.m  histogram.m
homework2/q1/PCLEg/: CMakeLists.txt  Makefile  cloud_viewer.cpp
homework2/q1/PCLEg/cloud_viewer/: ConsoleApplication1.sln
homework2/q1/PCLEg/cloud_viewer/ConsoleApplication1/: ConsoleApplication1.vcxproj.filters  PCL.props
homework2/q2/: description.txt  output.txt
homework2/q3/: rgb2gray.cpp  stdafx.cpp
homework2/sample_data/: readme
homework3/: README.md  rot_test.sh  run_chess.sh
homework4/: BUILD  README.md  camera_lidar_fusion_main.cc  camera_lidar_fusion_utils.cc  camera_lidar_fusion_utils.h  pointcloud_viewer.cc  pointcloud_viewer.h
homework5/: BUILD  README.md  find_route.cc  find_route_main.cc  geometry.h  map_visualizer_main.cc  processed_map_proto.txt
homework6/: README.md  explanation.txt  hist_v.m
perception/: BUILD  detect.sh  perception.cc  perception.h  perception_evaluation_main.cc  perception_evaluator.cc  perception_evaluator.h
pnc/: BUILD  find_route_main.cc  processed_map_proto.txt
(+93 files in other folders)
